openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: cdc-dashboard
  labels:
    app: cdc-dashboard
spec:
  to:
    kind: Service
    name: cdc-dashboard
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
